fix logic nhiều vloz